# open-parlement-backend

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: admin.py  exceptions.py  factories.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/tests/: test_user.py
apps/commons/: exceptions.py  filters.py  mixins.py  pagination.py  permissions.py  router.py  test.py
apps/commons/migrations/: 0001_initial.py
apps/commons/tests/: test_authentication.py
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
open_parlement/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
